--- a/style.css
+++ b/style.css
@@ -93,12 +93,12 @@ footer {
 }
 
 .mute-class{
-    margin-right: 10px;
+    margin: 10px;
 }
 
 
 .video-class{
-    margin-left: 10px;
+    margin: 10px;
 }
 
 .user-plus{
